HTML CSS changes

--- a/food-summary.html
+++ b/food-summary.html
@@ -9,6 +9,8 @@
         />
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
         <link rel="stylesheet" href="./css/common.css" type="text/css" />
+        <link rel="stylesheet" href="./css/getStarted.css" type="text/css" />
+        <link rel="stylesheet" href="./css/backgroundImage.css" type="text/css" />
         <link
             rel="icon"
             href="./images/favicon.jpeg"
@@ -45,14 +47,16 @@
                 </div>
                 <div class="food-chosen-steps">
                     <div class="step-details-ch">
-                        <div class="step-icon">
-                            <img src="" class="img img-responsive" alt="step" />
+                        <div class="step-icon f-l">
+                            <div class="step-icon-in food-delivery">
+                                <img src="./images/food-bowl.png" class="img img-responsive" alt="step" />
+                            </div>
                         </div>
-                        <div class="step-details">
-                            <div class="text">
+                        <div class="step-details f-l">
+                            <div class="text f-l">
                                 Food Delivery Session
                             </div>
-                            <div class="freq">
+                            <div class="freq f-l">
                                 <ul>
                                     <li><a href="#">Breakfast</a></li>
                                     <li><a href="#">Lunch</a></li>
@@ -60,68 +64,85 @@
                                     <li><a href="#">Dinner</a></li>
                                 </ul>
                             </div>
+                            <div class="clr"></div>
                         </div>
+                        <div class="clr"></div>
                     </div>
                     <div class="step-details-ch">
-                        <div class="step-icon">
-                            <img src="" class="img img-responsive" alt="step" />
+                        <div class="step-icon f-l">
+                            <div class="step-icon-in protein-pref">
+                                <img src="./images/protein-pref.png" class="img img-responsive" alt="step" />
+                            </div>
                         </div>
-                        <div class="step-details">
-                            <div class="text">
+                        <div class="step-details f-l">
+                            <div class="text f-l">
                                 Protein Preference
                             </div>
-                            <div class="freq">
+                            <div class="freq f-l">
                                 <ul>
                                     <li><a href="#">Vegeterian</a></li>
                                     <li><a href="#">Non-vegeterian</a></li>
                                     <li><a href="#">Eggeterian</a></li>
                                 </ul>
                             </div>
+                            <div class="clr"></div>
                         </div>
+                        <div class="clr"></div>
                     </div>
                     <div class="step-details-ch">
-                        <div class="step-icon">
-                            <img src="" class="img img-responsive" alt="step" />
+                        <div class="step-icon portion-size f-l">
+                            <div class="step-icon-in portion-size">
+                                <img src="./images/portion-size.png" class="img img-responsive" alt="step" />
+                            </div>
                         </div>
-                        <div class="step-details">
-                            <div class="text">
+                        <div class="step-details f-l">
+                            <div class="text f-l">
                                 Portion Size
                             </div>
-                            <div class="freq">
+                            <div class="freq f-l">
                                 <ul>
                                     <li><a href="#">Mini</a></li>
                                     <li><a href="#">Regular</a></li>
                                     <li><a href="#">Extra</a></li>
                                 </ul>
                             </div>
+                            <div class="clr"></div>
                         </div>
+                        <div class="clr"></div>
                     </div>
                     <div class="step-details-ch">
-                        <div class="step-icon">
-                            <img src="" class="img img-responsive" alt="step" />
+                        <div class="step-icon f-l">
+                            <div class="step-icon-in ror-mains">
+                                <img src="./images/rice-mains.png" class="img img-responsive rice-img" alt="step" />
+                                <img src="./images/roti-mains.png" class="img img-responsive roti-img" alt="step" />
+                            </div>
                         </div>
-                        <div class="step-details">
-                            <div class="text">
+                        <div class="step-details f-l">
+                            <div class="text f-l">
                                 Mains
                             </div>
-                            <div class="freq">
+                            <div class="freq f-l">
                                 <ul>
                                     <li><a href="#">Roti</a></li>
                                     <li><a href="#">Rice + Roti</a></li>
                                     <li><a href="#">Rice</a></li>
                                 </ul>
                             </div>
+                            <div class="clr"></div>
                         </div>
+                        <div class="clr"></div>
                     </div>
                     <div class="step-details-ch">
-                        <div class="step-icon">
-                            <img src="" class="img img-responsive" alt="step" />
+                        <div class="step-icon  f-l">
+                            <div class="step-icon-in veg-days">
+                                <img src="./images/carrot.png" class="img img-responsive" alt="step" />
+                            </div>
                         </div>
-                        <div class="step-details">
-                            <div class="text">
+                        <div class="step-details f-l">
+                            <div class="text f-l">
                                 Vegeterian Days
                             </div>
-                            <div class="freq">
+                            <div class="freq f-l">
                                 <ul>
                                     <li><a href="#">Monday</a></li>
                                     <li><a href="#">Tuesday</a></li>
@@ -132,20 +153,24 @@
                                     <li><a href="#">Sunday</a></li>
                                 </ul>
                             </div>
-                            <div class="more">
+                            <div class="more f-l">
                                 <a href="#">More</a>
                             </div>
+                            <div class="clr"></div>
                         </div>
+                        <div class="clr"></div>
                     </div>
                     <div class="step-details-ch">
-                        <div class="step-icon">
-                            <img src="" class="img img-responsive" alt="step" />
+                        <div class="step-icon cuisine-pref f-l">
+                            <div class="step-icon-in cuisine-pref">
+                                <img src="./images/cuisine-pref.png" class="img img-responsive" alt="step" />
+                            </div>
                         </div>
-                        <div class="step-details">
-                            <div class="text">
+                        <div class="step-details f-l">
+                            <div class="text f-l">
                                 Cuisine Preference
                             </div>
-                            <div class="freq">
+                            <div class="freq f-l">
                                 <ul>
                                     <li><a href="#">Jain</a></li>
                                     <li><a href="#">North Indian</a></li>
@@ -156,19 +181,52 @@
                                     <li><a href="#">Keto</a></li>
                                 </ul>
                             </div>
-                            <div class="more">
+                            <div class="more f-l">
                                 <a href="#">More</a>
                             </div>
+                            <div class="clr"></div>
                         </div>
+                        <div class="clr"></div>
                     </div>
                 </div>
+                <div class="hor-line"></div>
                 <div class="seven-days-preview">
                     <div class="head">
                         <h3>Here is your <span>next seven days of chef-curated menu.</span></h3>
                         <p>Don't like what you see? Edit this menu from yout profile page or below by changing daily preferences.</p>
                     </div>
                     <div class="days-wrap">
-
+                        <div class="days-wrap-in">
+                            <div class="days-tile f-l">
+                                <div class="date">20</div>
+                                <div class="day">Sat</div>
+                            </div>
+                            <div class="days-tile f-l">
+                                <div class="date">21</div>
+                                <div class="day">Sun</div>
+                            </div>
+                            <div class="days-tile f-l">
+                                <div class="date">22</div>
+                                <div class="day">Mon</div>
+                            </div>
+                            <div class="days-tile f-l">
+                                <div class="date">23</div>
+                                <div class="day">Tue</div>
+                            </div>
+                            <div class="days-tile f-l">
+                                <div class="date">24</div>
+                                <div class="day">Wed</div>
+                            </div>
+                            <div class="days-tile f-l">
+                                <div class="date">25</div>
+                                <div class="day">Thu</div>
+                            </div>
+                            <div class="days-tile f-l">
+                                <div class="date">26</div>
+                                <div class="day">Fri</div>
+                            </div>
+                            <div class="clr"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="change-preferences">
@@ -177,82 +235,103 @@
                         <p>(Veg/Non Veg, Cuisine, Portion Size.) Edit this section to change today's order preference.</p>
                     </div>
                     <div class="change-wrap">
-                        <div class="head">20th March, Saturday</div>
+                        <div class="head">
+                            <h3>20th March, Saturday</h3>
+                        </div>
                     </div>
                     <div class="meal-options">
-                        <div class="option">
-                            <img src="" class="img img-responsive" alt="breakfast" />
+                        <div class="option f-l">
+                            <div class="image-wr breakfast-tile">
+                                <img src="./images/breakfast-image.png" class="img img-responsive" alt="breakfast" />
+                            </div>
                             <div class="meal-sub-wrap">
                                 <h4>Breakfast</h4>
                                 <a href="#">Edit</a>
+                                <div class="clr"></div>
                             </div>
                         </div>
-                        <div class="option">
-                            <img src="" class="img img-responsive" alt="lunch" />
+                        <div class="option f-l">
+                            <div class="image-wr lunch-tile">
+                                <img src="./images/lunch-image.png" class="img img-responsive" alt="lunch" />
+                            </div>
                             <div class="meal-sub-wrap">
                                 <h4>Lunch</h4>
                                 <a href="#">Edit</a>
+                                <div class="clr"></div>
                             </div>
                         </div>
-                        <div class="option">
-                            <img src="" class="img img-responsive" alt="snacks" />
+                        <div class="option f-l">
+                            <div class="image-wr snacks-tile">
+                                <img src="./images/snacks-image.png" class="img img-responsive" alt="snacks" />
+                            </div>
                             <div class="meal-sub-wrap">
                                 <h4>Snacks</h4>
                                 <a href="#">Edit</a>
+                                <div class="clr"></div>
                             </div>
                         </div>
-                        <div class="option">
-                            <img src="" class="img img-responsive" alt="dinner" />
+                        <div class="option f-l">
+                            <div class="image-wr dinner-tile">
+                                <img src="./images/dinner-image.png" class="img img-responsive" alt="dinner" />
+                            </div>
                             <div class="meal-sub-wrap">
                                 <h4>Dinner</h4>
                                 <a href="#">Edit</a>
+                                <div class="clr"></div>
                             </div>
                         </div>
+                        <div class="clr"></div>
                     </div>
                     <div class="meal-option-ch">
                         <div class="meal-option-chosen-in">
-                            <div class="meal-cat-image">
-                                <img src="" class="img img-responsive" alt="" />
+                            <div class="meal-cat-image f-l">
+                                <img src="./images/jain-poha.png" class="img img-responsive" alt="" />
                             </div>
-                            <div class="meal-action-det">
+                            <div class="meal-action-det f-l">
                                 <div class="item-detail">
-                                    <h3>North Indian Breakfast</h3>
-                                    <h4>Poha</h4>
-                                    <p>Poha, peanuts, chillies</p>
+                                    <div class="head">
+                                        <h3>North Indian Breakfast</h3>
+                                        <h4>Poha</h4>
+                                        <p>Poha, peanuts, chillies</p>
+                                    </div>
                                 </div>
                                 <div class="item-detail-cat">
-                                    <div class="clasfi">
+                                    <div class="clasfi f-l">
                                         <ul>
                                             <li><a href="#">Veg</a></li>
                                             <li><a href="#">Non Veg</a></li>
                                         </ul>
                                     </div>
-                                    <div class="clasfi">
-                                        <label>Quantity</label>
+                                    <div class="clasfi f-l">
                                         <div class="quantity-wr">
-                                            <div class="subs">-</div>
-                                            <div class="value">10</div>
-                                            <div class="add">+</div>
+                                            <div class="quan f-l">Quantity</div>
+                                            <div class="subs f-l">-</div>
+                                            <div class="value f-l">10</div>
+                                            <div class="add f-l">+</div>
+                                            <div class="clr"></div>
                                         </div>
                                     </div>
+                                    <div class="clr"></div>
                                 </div>
                                 <div class="item-det-portion">
                                     <div class="clasfi">
-                                        <label>Portion Size</label>
-                                        <ul>
-                                            <li><a href="#">Small</a></li>
-                                            <li><a href="#">Regular</a></li>
-                                            <li><a href="#">Extra</a></li>
-                                        </ul>
+                                        <div class="quan f-l">Portion Size</div>
+                                        <div class="f-l">
+                                            <ul>
+                                                <li><a href="#">Small</a></li>
+                                                <li><a href="#">Regular</a></li>
+                                                <li><a href="#">Extra</a></li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="clr"></div>
                         </div>
                     </div>
                 </div>
                 <div class="main-action">
-                    <button class="medium-button">Proceed</button>
+                    <button class="med-button">Proceed</button>
                 </div>
             </div>
         </section>
