auth page html css

--- a/subscription.html
+++ b/subscription.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
         <link rel="stylesheet" href="./css/common.css" type="text/css" />
         <link rel="stylesheet" href="./css/getStarted.css" type="text/css" />
+        <link rel="stylesheet" href="./css/backgroundImage.css" type="text/css" />
         <link
             rel="icon"
             href="./images/favicon.jpeg"
@@ -36,54 +37,56 @@
             </div>
         </header>
         <section>
-            <div class="subscription-container">
-                <div class="subscription-wrapper">
-                    <div class="subscription-tile f-l">
-                        <div class="head">
-                            <p class="top-per">Per Day</p>
-                            <h3><span>&#8377;</span>140</h3>
-                            <h4>TRY FOR 3 DAYS</h4>
-                            <div class="commitment">
-                                <p>ZERO </p>
-                                <p>COMMITMENT</p>
+            <div class="subscription-cont-par">
+                <div class="subscription-container">
+                    <div class="subscription-wrapper">
+                        <div class="subscription-tile f-l">
+                            <div class="head">
+                                <p class="top-per">Per Day</p>
+                                <h3><span>&#8377;</span>140</h3>
+                                <h4>TRY FOR 3 DAYS</h4>
+                                <div class="commitment">
+                                    <p>ZERO </p>
+                                    <p>COMMITMENT</p>
+                                </div>
+                            </div>
+                            <div class="subscription-action">
+                                <button class="select-button">Select</button>
                             </div>
                         </div>
-                        <div class="subscription-action">
-                            <button class="select-button">Select</button>
-                        </div>
-                    </div>
-                    <div class="subscription-tile recommended f-l">
-                        <div class="recomm">
-                            RECOMMENDED
-                        </div>
-                        <div class="head">
-                            <p class="top-per">Per Day</p>
-                            <h3><span>&#8377;</span>120</h3>
-                            <h4>FOR 10 DAYS</h4>
-                            <div class="commitment">
-                                <p>MOST OF OUR CUSTOMERS </p>
-                                    <p>CHOOSE THIS</p>
+                        <div class="subscription-tile recommended f-l">
+                            <div class="recomm">
+                                RECOMMENDED
+                            </div>
+                            <div class="head">
+                                <p class="top-per">Per Day</p>
+                                <h3><span>&#8377;</span>120</h3>
+                                <h4>FOR 10 DAYS</h4>
+                                <div class="commitment">
+                                    <p>MOST OF OUR CUSTOMERS </p>
+                                        <p>CHOOSE THIS</p>
+                                </div>
+                            </div>
+                            <div class="subscription-action">
+                                <button class="select-button">Select</button>
                             </div>
                         </div>
-                        <div class="subscription-action">
-                            <button class="select-button">Select</button>
-                        </div>
-                    </div>
-                    <div class="subscription-tile f-l">
-                        <div class="head">
-                            <p class="top-per">Per Day</p>
-                            <h3><span>&#8377;</span>110</h3>
-                            <h4>FOR 30 DAYS</h4>
-                            <div class="commitment">
-                                <p>IF YOU REALLY LIKE AND </p>
-                                    <p>SUBSCRIBED BEFORE</p>
+                        <div class="subscription-tile f-l">
+                            <div class="head">
+                                <p class="top-per">Per Day</p>
+                                <h3><span>&#8377;</span>110</h3>
+                                <h4>FOR 30 DAYS</h4>
+                                <div class="commitment">
+                                    <p>IF YOU REALLY LIKE AND </p>
+                                        <p>SUBSCRIBED BEFORE</p>
+                                </div>
+                            </div>
+                            <div class="subscription-action">
+                                <button class="select-button">Select</button>
                             </div>
                         </div>
-                        <div class="subscription-action">
-                            <button class="select-button">Select</button>
-                        </div>
+                        <div class="clr"></div>
                     </div>
-                    <div class="clr"></div>
                 </div>
             </div>
         </section>
