--- a/auth.html
+++ b/auth.html
@@ -9,6 +9,8 @@
         />
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
         <link rel="stylesheet" href="./css/common.css" type="text/css" />
+        <link rel="stylesheet" href="./css/getStarted.css" type="text/css" />
+        <link rel="stylesheet" href="./css/backgroundImage.css" type="text/css" />
         <link
             rel="icon"
             href="./images/favicon.jpeg"
@@ -37,48 +39,54 @@
         <section>
             <div class="auth-container">
                 <div class="auth-wrapper">
-                    <div class="top-links">
-                        <ul>
-                            <li><a href="#">Login</a></li>
-                            <li><a href="#">Sign Up</a></li>
-                        </ul>
-                    </div>
-                    <div class="login-wrap"></div>
-                    <div class="sign-up-wrap">
-                        <div class="google-sign-up">
-                            <button>Sign up with Google</button>
+                    <div class="auth-wrapper-inn">
+                        <div class="top-links">
+                            <ul>
+                                <li><a href="#">Login</a></li>
+                                <li><a href="#">Sign Up</a></li>
+                            </ul>
                         </div>
-                        <div class="fb-sign-up">
-                            <button>Sign up with Facebook</button>
-                        </div>
-                        <div class="phone-sign-up">
-                            <button>Sign in using phone number</button>
-                        </div>
-                    </div>
-                    <div class="phone-sign-in">
-                        <div class="item">
-                            <input type="text" placeholder="Enter your phone number" />
-                            <button>Verify</button>
-                        </div>
-                        <div class="otp-in">
-                            <div class="otp-wrap">
-                                <input type="text" maxlength="1" />
-                                <input type="text" maxlength="1" />
-                                <input type="text" maxlength="1" />
-                                <input type="text" maxlength="1" />
-                                <input type="text" maxlength="1" />
-                                <input type="text" maxlength="1" />
+                        <div class="login-wrap"></div>
+                        <div class="sign-up-wrap">
+                            <div class="google-sign-up">
+                                <button><img src="./images/google-icon.png" />Sign up with Google</button>
                             </div>
-                            <div class="action">
-                                <button>Resend</button>
+                            <div class="fb-sign-up">
+                                <button><img src="./images/fb-icon.png" />Sign up with Facebook</button>
+                            </div>
+                            <div class="phone-sign-up">
+                                <button><img src="./images/phone-icon.png" />Sign in using phone number</button>
                             </div>
                         </div>
+                        <div class="phone-sign-in">
+                            <div class="item">
+                                <input type="text" class="input-hundred-percent" placeholder="Enter your phone number" />
+                                <button class="small-button">Verify</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="otp-in">
+                        <div class="otp-wrap f-l">
+                            <input type="text" class="input-single-length" maxlength="1" />
+                            <input type="text" class="input-single-length" maxlength="1" />
+                            <input type="text" class="input-single-length" maxlength="1" />
+                            <input type="text" class="input-single-length" maxlength="1" />
+                            <input type="text" class="input-single-length" maxlength="1" />
+                            <input type="text" class="input-single-length" maxlength="1" />
+                            <p>Enter your OTP</p>
+                        </div>
+                        <div class="action f-l">
+                            <button class="small-button">Resend</button>
+                            
+                        </div>
+
+                        <div class="clr"></div>
                     </div>
                 </div>
             </div>
         </section>
         <footer>
-            <div class="footer-main-wrap">
+            <div class="footer-main-wrap steps">
                 <div class="footer-in">
                     <img src="" class="img img-responsive" />
                 </div>
