--- a/register.html
+++ b/register.html
@@ -9,6 +9,8 @@
         />
         <link rel="stylesheet" href="./css/index.css" type="text/css" />
         <link rel="stylesheet" href="./css/common.css" type="text/css" />
+        <link rel="stylesheet" href="./css/getStarted.css" type="text/css" />
+        <link rel="stylesheet" href="./css/backgroundImage.css" type="text/css" />
         <link
             rel="icon"
             href="./images/favicon.jpeg"
@@ -36,40 +38,43 @@
         </header>
         <section>
             <div class="register-container">
-                <div class="register-wrapper">
-                    <div class="head">
-                        <p>Enter and verify your details</p>
-                    </div>
-                    <div class="input-con">
-                        <label>Name*</label>
-                        <input type="text" placeholder="Enter Name" />
-                        <p class="error">Please enter Name</p>
-                    </div>
-                    <div class="input-con">
-                        <label>Phone*</label>
-                        <input type="text" placeholder="Enter Phone" />
-                        <p class="error">Please enter valid Phone Number</p>
-                    </div>
-                    <div class="input-con">
-                        <label>Email*</label>
-                        <input type="email" placeholder="Enter Email" />
-                        <p class="error">Please enter valid Email ID</p>
-                    </div>
-                    <div class="input-con">
-                        <div class="divider">
-                            <label>Address*</label>
+                <div class="register-wrap-par">
+                    <div class="register-wrapper">
+                        <div class="head">
+                            <p>Enter and verify your details</p>
                         </div>
-                        <div class="divider">
-                            <input type="text" placeholder="Flat/House No"/>
-                            <input type="text" placeholder="Building Name" />
-                            <input type="text" placeholder="Locality" />
-                            <input type="text" placeholder="Landmark" />
-                            <input type="text" placeholder="PinCode" />
-                            <input type="button" value="Locate Me" />
+                        <div class="input-con">
+                            <label>Name*</label>
+                            <input type="text" class="input-hundred-percent" placeholder="Enter Name" />
+                            <p class="error">Please enter Name</p>
                         </div>
-                    </div>
-                    <div class="form-action">
-                        <button type="submit">Register</button>
+                        <div class="input-con">
+                            <label>Phone*</label>
+                            <input type="text" class="input-hundred-percent" placeholder="Enter Phone" />
+                            <p class="error">Please enter valid Phone Number</p>
+                        </div>
+                        <div class="input-con">
+                            <label>Email*</label>
+                            <input type="email" class="input-hundred-percent" placeholder="Enter Email" />
+                            <p class="error">Please enter valid Email ID</p>
+                        </div>
+                        <div class="input-con">
+                            <div class="divider add f-l">
+                                <p>Address*</p>
+                            </div>
+                            <div class="divider in f-l">
+                                <input type="text" class="input-forty-percent" placeholder="Flat/House No"/>
+                                <input type="text" class="input-forty-percent" placeholder="Building Name" />
+                                <input type="text" class="input-forty-percent" placeholder="Locality" />
+                                <input type="text" class="input-forty-percent" placeholder="Landmark" />
+                                <input type="text" class="input-forty-percent" placeholder="PinCode" />
+                                <input type="button" class="input-forty-percent" value="Locate Me" />
+                            </div>
+                            <div class="clr"></div>
+                        </div>
+                        <div class="form-action">
+                            <button class="small-button" type="submit">Register</button>
+                        </div>
                     </div>
                 </div>
             </div>
