push js changes

--- a/getStartedSteps.html
+++ b/getStartedSteps.html
@@ -103,10 +103,10 @@
                             </div>
                             <div class="step-actions">
                                 <div class="actions">
-                                    <button class="freq-skip step-btn-slide" data-info='{"skipNonVeg":true}'>Yes</button>
+                                    <button class="freq-skip step-btn-slide" data-info='{"skipNonVeg":"yes"}'>Yes</button>
                                 </div>
                                 <div class="actions">
-                                    <button class="freq-skip-no step-btn-slide" data-info='{"skipNonVeg":false}'>No, Eat Everyday</button>
+                                    <button class="freq-skip-no step-btn-slide" data-info='{"skipNonVeg":"no"}'>No, Eat Everyday</button>
                                 </div>
                             </div>
                         </div>
