--- a/orderSummary.html
+++ b/orderSummary.html
@@ -108,7 +108,13 @@
                                     <div class="address f-l">
                                         <div class="subs-type"><h3>Delivery Address</h3></div>
                                         
-                                        <div class="del-to"><h5>Home</h5></div>
+                                        <div class="del-to">
+                                            <h5>Home</h5>
+                                            <div class="control-actions-address">
+                                                <a href="javascript:void(0);" class="glyphicon glyphicon-pencil"></a>
+                                                <a href="javascript:void(0);" class="glyphicon glyphicon-trash"></a>
+                                            </div>
+                                        </div>
                                         <p>18, Riveria Heights</p>
                                         <p>Koramangala, 6th Block</p>
                                         <p>Bangalore</p>
@@ -139,6 +145,10 @@
                                             </div>
                                             <div class="delivery-sub">
                                                 Delivering to <span>Home</span>
+                                                <div class="control-actions-address">
+                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-pencil"></a>
+                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-trash"></a>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="addr-header">
@@ -147,6 +157,10 @@
                                             </div>
                                             <div class="delivery-sub">
                                                 Delivering to <span>Home</span>
+                                                <div class="control-actions-address">
+                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-pencil"></a>
+                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-trash"></a>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="addr-header">
@@ -155,6 +169,10 @@
                                             </div>
                                             <div class="delivery-sub">
                                                 Delivering to <span>Home</span>
+                                                <div class="control-actions-address">
+                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-pencil"></a>
+                                                    <a href="javascript:void(0);" class="glyphicon glyphicon-trash"></a>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
